add new file for routing and modify jsons in account-service

--- a/src/app/account/account-register/account-register.component.html
+++ b/src/app/account/account-register/account-register.component.html
@@ -26,5 +26,6 @@
         {{ item.text }}
       </li>
     </ul>
+    <p class="account-register-completed__paragraph">{{ formData.text }}</p>
   </div>
 </div>
