--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-login></app-login>
-<router-outlet></router-outlet>
-
-
+<header class="header">
+    <h1 class="header__title">Hotel Application</h1>
+    <app-login></app-login>
+    <div class="header__main-section">
+        <router-outlet></router-outlet>
+    </div>
+</header>
