--- a/src/assets/abstracts/_variables.scss
+++ b/src/assets/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-grey-dark-4: rgba(255, 255, 255, 0.664);
 
 $color-white: #fff;
 $color-black: #000;
+$color-red: rgba(82, 0, 0, 0.829);
 
 // FONT
 
