--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -4,6 +4,7 @@
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
+@import "base/validations";
 
 @import "components/button";
 @import "components/form";
